add admin features

--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -5,11 +5,11 @@
 
 <div class="admin-back">
 
-   
-    <button mat-raised-button routerLink="/p"  class="patient" > Patients </button>
-    
-    <button mat-raised-button routerLink="/d"  class="doctor" > Doctors </button>
-    
+
+    <button mat-raised-button routerLink="/patient"  class="patient" > Patients </button>
+
+    <button mat-raised-button routerLink="/doctor"  class="doctor" > Doctors </button>
+
 </div>
 
 </div>
