--- a/src/app/doctor/profile/profile.component.html
+++ b/src/app/doctor/profile/profile.component.html
@@ -7,7 +7,7 @@
   <p> Gender : {{doctor?.gender}} </p>
   <p> NIC : {{doctor?.nic}} </p>
   <p> Tele: {{doctor?.teleNumber}} </p>
-  <p> University: {{doctor?.university}} </p>
+  <p> SLMC Number: {{doctor?.university}} </p>
   <p> SpecialList Side: {{doctor?.specialistSide}} </p>
   <p>  Mobile Number : {{doctor?.mobileNumber}} </p>
 
