--- a/src/app/auth/system.component.css
+++ b/src/app/auth/system.component.css
@@ -1,5 +1,25 @@
 .login{
+  width: 90%;
   display: flex;
   flex-direction: column;
-  margin: 20px;
+  /* justify-content: center;
+  align-items: center; */
+  margin: 20px auto;
+}
+
+button{
+  height: 50px;
+  font-size: 20px;
+}
+
+@media (min-width:700px){
+  .login{
+    width: 60%;
+  }
+  button{
+    width: 150px;
+    align-self: flex-end;
+    height: 30px;
+    font-size: 15px;
+  }
 }
