--- a/src/app/auth/system.component.html
+++ b/src/app/auth/system.component.html
@@ -14,6 +14,8 @@
   <mat-error *ngIf="error"> Email and password both required </mat-error>
   <mat-error *ngIf="unauth"> Invalid Login </mat-error>
 
-  <button type="submit" style="height: 50px;font-size: 30px;" mat-raised-button color="primary"> Log In </button>
+  <button type="submit"
+
+  mat-raised-button color="primary"> Log In </button>
 
 </form>
